log
Sat, May 17, 2025  3:23:23 PM: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
3f0e54c
Sat, May 17, 2025  3:27:38 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
cc1.exe: all warnings being treated as errors
f0c1d11
Sat, May 17, 2025  3:28:07 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
cc1.exe: all warnings being treated as errors
537d049
Sat, May 17, 2025  3:28:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
869cb82
Sat, May 17, 2025  3:37:44 PM: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++--
 1 file changed, 32 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
fde8b8c
Sat, May 17, 2025  3:39:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3b24c56
Sat, May 17, 2025  3:42:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e88ff4a
Sat, May 17, 2025  3:43:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b0a810
Sat, May 17, 2025  3:46:46 PM: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
d51c6d4
